# SteelWorks

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sbom.cdx.json  streamlit_app.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy.yml  precommit.yml  sbom.yml
app/: __init__.py  db.py  logging_config.py  main.py  models.py  queries.py  repository.py  service.py  streamlit_app.py
db/: sample_queries.sql  schema.sql  seed.sql
scripts/: bootstrap_render_db.py  check_gpl_licenses.py
tests/: conftest.py  test_acceptance_criteria.py
tests/e2e/: conftest.py  test_streamlit_dashboard.py
tests/integration/: test_operations_service_integration.py
tests/unit/: test_operations_service.py
